Tidy up SupplierOrdersController a bit